Replaced all dependencies to working versions

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .DS_Store
 node_modules
-/.svelte-kit
 /build
-/functions
-# intellij stuff
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+.vercel
+.output
 /.idea
